--- a/WorkoutLogSP/WorkoutLogSP.csproj
+++ b/WorkoutLogSP/WorkoutLogSP.csproj
@@ -55,6 +55,9 @@
     <EmbeddedResource Update="Views\TeamWorkoutList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\UserInformation.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\WorkoutEntry.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
