Added Image for the Login Page

--- a/WorkoutLogSP/WorkoutLogSP.csproj
+++ b/WorkoutLogSP/WorkoutLogSP.csproj
@@ -80,4 +80,8 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ImagesAndIcons\" />
+  </ItemGroup>
 </Project>
