--- a/WorkoutLogSP/WorkoutLogSP.csproj
+++ b/WorkoutLogSP/WorkoutLogSP.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ImagesAndIcons\**" />
+    <EmbeddedResource Remove="ImagesAndIcons\**" />
+    <None Remove="ImagesAndIcons\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FirebaseAuthentication.net" Version="3.4.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -79,9 +85,5 @@
     <EmbeddedResource Update="Views\WorkoutViewPageP.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ImagesAndIcons\" />
   </ItemGroup>
 </Project>
